--- a/views/cards.hbs
+++ b/views/cards.hbs
@@ -5,16 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startup Cards</title>
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+   {{> _header}}
     <div class="container">
         <div class="grid">
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="broker.png" alt="Broker" />
+                    <img class="card-img" src="/images/broker.png" alt="Broker" />
                     <div class="card-content">
                         <h1 class="card-header">Brokers on the Bay</h1>
                         <p class="card-text">
@@ -28,7 +29,7 @@
             </div>
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="flipr.jpg" alt="flipr img" />
+                    <img class="card-img" src="/images/flipr.jpg" alt="flipr img" />
                     <div class="card-content">
                         <h1 class="card-header">flipr</h1>
                         <p class="card-text">
@@ -41,7 +42,7 @@
             </div>
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="openly.jpg" alt="Openly" />
+                    <img class="card-img" src="/images/openly.jpg" alt="Openly" />
                     <div class="card-content">
                         <h1 class="card-header">Openly</h1>
                         <p class="card-text">
@@ -57,7 +58,7 @@
         <div class="grid">
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="broker.png" alt="Broker" />
+                    <img class="card-img" src="/images/broker.png" alt="Broker" />
                     <div class="card-content">
                         <h1 class="card-header">Brokers on the Bay</h1>
                         <p class="card-text">
@@ -71,7 +72,7 @@
             </div>
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="flipr.jpg" alt="flipr img" />
+                    <img class="card-img" src="/images/flipr.jpg" alt="flipr img" />
                     <div class="card-content">
                         <h1 class="card-header">flipr</h1>
                         <p class="card-text">
@@ -84,7 +85,7 @@
             </div>
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="openly.jpg" alt="Openly" />
+                    <img class="card-img" src="/images/openly.jpg" alt="Openly" />
                     <div class="card-content">
                         <h1 class="card-header">Openly</h1>
                         <p class="card-text">
