investor sign up

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -24,7 +24,7 @@
             </div>
             <button type="button" onclick="check()"><a href="/home">Login</a></button>
             <div class="signup_link">
-            Not a member? signup as:<a href="/signup-investor"> Investor</a> or <a href="/signup-startup"> Startup</a> or <a href="/signup-intern"> Intern</a>
+            Not a member? signup as:<a href="signup/signup_investor"> Investor</a> or <a href="/signup/signup_startup"> Startup</a> or <a href="/signup/signup_intern"> Intern</a>
             </div>
         </form>
     </div>
