--- a/views/signup_investor.hbs
+++ b/views/signup_investor.hbs
@@ -3,13 +3,12 @@
 <html>
     <head>
         <title>Investor Signup Page</title>
-        <link rel="stylesheet" text="text/css" href="main.css" />
+        <link rel="stylesheet" text="text/css" href="/css/main.css" />
     </head>
 
-    <link rel="stylesheet" text="text/css" href="main.css" />
     <body>
         <div id="container">
-            <form action="investorSignUp" method="POST">
+            <form action="/signup/investorSignUp" method="POST">
                 <h1>Investor Sign Up</h1>
                 <hr id="header_seperator" />
                 <div class="text_field_container">
