--- a/views/signup_startup.hbs
+++ b/views/signup_startup.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Startup Signup Page</title>
-        <link rel="stylesheet" text="text/css" href="main.css" />
+        <link rel="stylesheet" text="text/css" href="/css/main.css" />
     </head>
 
     <body>
