--- a/views/signup_investor.hbs
+++ b/views/signup_investor.hbs
@@ -43,7 +43,7 @@
 
                 <button type="submit" onclick="validate()" id="submit_btn">Create Account</button>
                 <div id="footer">
-                    Already has an account? Go to <a href="../LoginForm.html">Login</a>.
+                    Already has an account? Go to <a href="/login">Login</a>.
                 </div>
             </form>
         </div>
