--- a/views/signup_startup.hbs
+++ b/views/signup_startup.hbs
@@ -145,7 +145,7 @@
                 
                 <button type="submit" id="submit_btn"><a href="signup_startup_project.html" style="text-decoration: none;color:white;">Next</a></button>
                 <div id="footer">
-                    Already have an account? Go to <a href="../LoginForm.html">Login</a>.
+                    Already have an account? Go to <a href="/login">Login</a>.
                 </div>
             </form>
         </div>
