--- a/views/signup_intern.hbs
+++ b/views/signup_intern.hbs
@@ -244,7 +244,7 @@
             
                 <button type="submit" onclick="validate()" id="submit_btn">Create Account</button>
                 <div id="footer">
-                    Already has an account? Go to <a href="/logic">Login</a>.
+                    Already has an account? Go to <a href="/login">Login</a>.
                 </div>
             </form>
         </div>
