--- a/public/css/login_form_styles.css
+++ b/public/css/login_form_styles.css
@@ -85,7 +85,7 @@ form .txt_field{
     width: 100%;
     background-color: red;
 }
-button{
+input[type="submit"]{
     width:100%;
     height:50px;
     border:1 px solid;
