--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="images/startup2.jpg" style="width:100%">
+        <img src="images/startup1.png" style="width:100%">
         <div class="text-1">Caption Text</div>
         </div>
     
@@ -53,24 +53,24 @@
 
   <div class="zone blue grid-wrapper">
       <div class="card zone">
-          <img src="/images/startup1.jpg">
+          <img src="/images/openly.jpg">
           <div class="text">
-              <h1>Start up 1</h1>
-              <p>We believe in working together</p>
+              <h1>Openly</h1>
+              <p>SmartStart helped our company tp gain investors and helped to deliver our product to deliver our product to audience</p>
               <button>Learn more</button>
           </div>
       </div>
     <div class="card zone"><img src="/images/startup2.jpg">
         <div class="text">
-            <h1>Start up 2</h1>
-            <p>We believe in working together</p>
+            <h1>Brokers</h1>
+            <p>Helped our startup to gain talented interns and attracted trust-worthy investors</p>
             <button>Learn more</button>
         </div>
     </div>
     <div class="card zone"><img src="/images/startup3.jpg">
         <div class="text">
-            <h1>Start up 3</h1>
-            <p>We believe in working together</p>
+            <h1>Synnotech</h1>
+            <p>Helped the company to attract investors</p>
             <button>Learn more</button>
         </div>
     </div>
@@ -94,7 +94,7 @@
               <input required type="email" id="lname" name="lastname" placeholder="Your e-mail address..">
           
               <label for="subject">Message</label>
-              <textarea required id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+              <textarea required id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
           
               <input type="submit" value="Submit">
           
