--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,8 +1,70 @@
-<nav class="nav-zone blue sticky" style="color: #ac9898;">
-      <ul class="main-nav" >
-          <li><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M0 7v15h24v-15h-24zm22 13h-20v-6h6v-2h-6v-3h20v3h-6v2h6v6zm-13-15.5c0-.276.224-.5.5-.5h5c.276 0 .5.224.5.5v1.5h2v-2c0-1.104-.896-2-2-2h-6c-1.104 0-2 .896-2 2v2h2v-1.5zm5 6.5h-4v4h4v-4z"/></svg></li>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/home">Home</a></li>
-          <li class="push"><a href="#footer-contact">Contact</a></li>
-  </ul>
-  </nav>
+<style>
+    .nav-zone {
+        color: rgb(0, 0, 0);
+        font-size: 2em;
+        text-align: left;
+        border-radius: 4px;
+        transition: all 0.3s linear;
+        justify-content: left !important;
+    }
+
+    .nav-zone:hover {
+        -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+        -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+        -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px,
+            inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+        box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    }
+
+    .main-nav {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        font-size: 0.7em;
+        height: 60px;
+        color: #0094f7;
+        text-align: justify;
+    }
+
+    a:hover {
+        color: #686de0;
+    }
+
+    @media only screen and (max-width: 600px) {
+        .main-nav {
+            font-size: 0.5em;
+            padding: 0;
+        }
+    }
+
+    .blue {
+        background: #3B3B3B;
+    }
+
+
+    .push {
+        margin-left: auto;
+    }
+
+    li {
+        padding: 20px;
+    }
+
+    a {
+        color: #f5f5f6;
+        text-decoration: none;
+    }
+
+</style>
+<nav class="nav-zone blue sticky">
+    <ul class="main-nav">
+        <li><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
+                <path
+                    d="M0 7v15h24v-15h-24zm22 13h-20v-6h6v-2h-6v-3h20v3h-6v2h6v6zm-13-15.5c0-.276.224-.5.5-.5h5c.276 0 .5.224.5.5v1.5h2v-2c0-1.104-.896-2-2-2h-6c-1.104 0-2 .896-2 2v2h2v-1.5zm5 6.5h-4v4h4v-4z">
+                </path>
+            </svg></li>
+        <li><a href="#">Logout</a></li>
+        <li><a href="/home">Home</a></li>
+        <li class="push"><a href="#footer-contact">Contact</a></li>
+    </ul>
+</nav>
