--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,3 +107,65 @@ body {
     grid-gap: 3rem;
   }
 }
+/**nav-styles**/
+.nav-zone {
+  color:#FFF;
+  font-size:2em;
+  text-align: left;
+  border-radius:4px;
+  transition: all 0.3s linear;
+}
+
+.nav-zone:hover {
+  -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+  box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+}
+
+
+.main-nav {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  font-size: 0.7em;
+  height: 60px;
+  color: #0094f7;
+  text-align: justify;
+}
+
+a:hover {
+  color: #686de0;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .main-nav {
+      font-size: 0.5em;
+      padding: 0;
+  }
+}
+
+
+.push {
+  margin-left: auto;
+}
+
+
+li {
+  padding: 20px;
+}
+
+a {
+  color: #f5f5f6;
+  text-decoration: none;
+}
+
+
+.sticky {
+position: fixed;
+z-index: 1;
+top: 0;
+width: 100%;
+}
+
