added account route

--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -48,7 +48,7 @@
                               <h5>Email</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                               abc@gmail.com
+                               {{email}}
                             </div>
                         </div>
                         <hr>
