--- a/views/cards.hbs
+++ b/views/cards.hbs
@@ -12,13 +12,12 @@
 <body>
    {{> _header}}
     <div class="container">
-         {{name}}
         <div class="grid">
             <div class="grid-item">
                 <div class="card">
                     <img class="card-img" src="/images/broker.png" alt="Broker" />
                     <div class="card-content">
-                        <h1 class="card-header">Brokers on the Bay</h1>
+                        <h1 class="card-header">Name</h1>
                         <p class="card-text">
                             We are a London based startup and are known
                             for our team based approach on broking. It will be our
@@ -100,6 +99,10 @@
             </div>
         </div>
     </div>
+    <script>
+        let a="{{startups}}";
+        console.log(a);
+    </script>
 </body>
 
 </html>
