Added investor dashboard

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,7 +60,7 @@
               <button>Learn more</button>
           </div>
       </div>
-    <div class="card zone"><img src="/images/startup2.jpg">
+    <div class="card zone"><img src="/images/broker.png">
         <div class="text">
             <h1>Brokers</h1>
             <p>Helped our startup to gain talented interns and attracted trust-worthy investors</p>
