--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -56,7 +56,7 @@
     }
 
 </style>
-<nav class="nav-zone blue sticky">
+<nav class="nav-zone blue">
     <ul class="main-nav">
         <li><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
                 <path
