startup_account added

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -65,6 +65,7 @@
             </svg></li>
         <li><a href="#">Logout</a></li>
         <li><a href="/home">Home</a></li>
+        <li><a href="/account">Account</a></li>
         <li class="push"><a href="#footer-contact">Contact</a></li>
     </ul>
 </nav>
