--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -8,9 +8,18 @@
     {{> _header}}
    <div class="container">
        <div class="main">
-           <div class="topbar">
            </div>
            <div class="row">
+             <div class="col-md-4 mt-1">
+                 <div class="card text-center sidebar">
+                   <div class="card-body">
+                       <img src="/images/broker.png" class="rounded-circle" width="150">
+                     <div class="mt-3">
+                         <a href="">Account type</a>
+                    </div>
+                  </div>
+                </div>
+             </div>
              <div class="col-md-8 mt-1">
                   <div class="card mb-3 content">
                      <h1 class="a-3 pt-3">About</h1>
