--- a/views/account_startup.hbs
+++ b/views/account_startup.hbs
@@ -8,21 +8,14 @@
     {{> _header}}
    <div class="container">
        <div class="main">
-           <div class="topbar">
-              <a href="">logout</a>
-              <a href="">Support</a>
-              <a href="">work</a>
-              <a href="">Home</a>
-
            </div>
            <div class="row">
              <div class="col-md-4 mt-1">
                  <div class="card text-center sidebar">
                    <div class="card-body">
-                     <img src="flipr.jpg" class="rounded-circle" width="150">
+                     <img src="/images/broker.png" class="rounded-circle" width="150">
                      <div class="mt-3">
- 					     <h3>Flipr</h3>
-                         
+ 					     <h3>Account type</h3>                         
                     </div>
                   </div>
                 </div>
@@ -36,7 +29,7 @@
                                <h5>Startup Name</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-                                 Flipr
+                                 {startupName}
                              </div>
                          </div>
                          <hr>
@@ -45,7 +38,7 @@
                               <h5>Startup Email</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                               flipr@gmail.com
+                               {startupEmail}
                             </div>
                         </div>
                         <hr>
@@ -54,7 +47,7 @@
                                 <h5>Startup CIN</h5>
                            </div>
                            <div class="col-md-9 text-secondary">
-                              L21091KA2019OPC1413331
+                              {startupCIN}
                            </div>
                         </div>
                         <hr>
@@ -63,7 +56,7 @@
                                   <h5>Startup stage</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-  							      Early Traction
+  							      {startupStage}
                              </div>
                          </div>
 						 <hr>
@@ -72,7 +65,7 @@
                                   <h5>Startup Nature</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-  							      Partnership Firm
+  							      {startupNature}
                              </div>
                          </div>
 						 <hr>
@@ -81,7 +74,7 @@
                                   <h5>Startup Website Link</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-  							      <a href="https://play.google.com/store/apps/details?id=com.goflipr.flipr&hl=en_IN&gl=US ">flipr</a>
+  							      <a href="https://play.google.com/store/apps/details?id=com.goflipr.flipr&hl=en_IN&gl=US">{startupWebsiteLink}</a>
                              </div>
                          </div> 
 						 <hr>
@@ -90,20 +83,16 @@
                                   <h5>Startup Details</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-  							       We are a smart water management company and have a 
-                                  unique approach towards managing water resources.
+  							       {startupDetails}
                              </div>
                          </div>
 						 <hr>
-                        <div class="row">
-                             <button type="button">Add Project</button>
-                         </div>
                      </div>
                  </div>
                  
                </div>
            </div>
-
+           <br><br>
            <h1>INTERNS APPLIED</h1>
     <table class="content-table">
         <thead>
@@ -112,7 +101,6 @@
                 <th>Email</th>
                 <th>Department</th>
                 <th>Date of Application</th>
-                <th>Status</th>
             </tr>
         </thead>
         <tbody>
@@ -121,24 +109,22 @@
                 <td>mark@gmail.com</td>
                 <td>Aeronautical Engineering</td>
                 <td>23-02-2021</td>
-                <td>Accepted</td>
             </tr>
             <tr>
                 <td>Robert</td>
                 <td>robert@gmail.com</td>
                 <td>Automobile Engineering</td>
                 <td>13-01-2021</td>
-                <td>Pending</td>
             </tr>
             <tr>
                 <td>John</td>
                 <td>john@gmail.com</td>
                 <td>Information Technology</td>
                 <td>21-03-2021</td>
-                <td>Rejected</td>
             </tr>
         </tbody>
     </table>
+    <br><br>
 	        <h1>INVESTORS APPLIED</h1>
     <table class="content-table">
         <thead>
@@ -147,7 +133,6 @@
                 <th>Company Email</th>
                 <th>Company Type</th>
                 <th>Date of Application</th>
-                <th>Status</th>
             </tr>
         </thead>
         <tbody>
@@ -156,25 +141,22 @@
                 <td>barclays@gmail.com</td>
                 <td>CS/IT</td>
                 <td>23-02-2021</td>
-                <td>Accepted</td>
             </tr>
             <tr>
                 <td>UITs</td>
                 <td>uit@gmail.com</td>
                 <td>Income Funds Investment</td>
                 <td>13-01-2021</td>
-                <td>Pending</td>
             </tr>
             <tr>
                 <td>Credit Suisse</td>
                 <td>creditsuisse@gmail.com</td>
                 <td>Wealth management firm</td>
                 <td>21-03-2021</td>
-                <td>Rejected</td>
             </tr>
         </tbody>
     </table>
-	 	        
+	 	     <br><br>   
        </div>
     </div>
 </body>
