--- a/views/cards.hbs
+++ b/views/cards.hbs
@@ -14,7 +14,7 @@
              {{#each startups}}
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="/images/broker.png" alt="{{this.startupName}}" />
+                    <img class="card-img" src="{{this.startupLogo}}" alt="{{this.startupName}}" />
                     <div class="card-content">
                        
                         <h1 class="card-header">{{this.startupName}}</h1>
