--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -5,17 +5,25 @@
 </head>
 
 <body>
-    {{> _header}}
    <div class="container">
        <div class="main">
+           <div class="topbar">
+              <a href="">Logout</a>
+              <a href="">Contact</a>
+              <a href="#content-table">Invested Startups</a>
+              <a href="">Home</a>
+
            </div>
            <div class="row">
              <div class="col-md-4 mt-1">
                  <div class="card text-center sidebar">
                    <div class="card-body">
-                       <img src="/images/broker.png" class="rounded-circle" width="150">
                      <div class="mt-3">
-                         <a href="">Account type</a>
+ 					     <h3>Company Name</h3>
+                          <br>
+                         {{!-- <a href="">Work</a> --}}
+                         <a href="">Company type</a>
+                         <a href="">Contact Us</a>
                     </div>
                   </div>
                 </div>
