temp account changes

--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -35,7 +35,7 @@
                          <hr>
                          <div class="row">
                             <div class="col-md-3">
-                              <h5>Email</h5>
+                              <h5>Company Type</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
                                {{email}}
@@ -44,7 +44,7 @@
                         <hr>
                         <div class="row">
                            <div class="col-md-3">
-                                <h5>Type</h5>
+                                <h5>Company Email</h5>
                            </div>
                            <div class="col-md-9 text-secondary">
                               {Investor}
