investor account basic details

--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -37,7 +37,7 @@
                                <h5>Company Name</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-                                 {Flipr}
+                                 {{compName}}
                              </div>
                          </div>
                          <hr>
@@ -46,7 +46,7 @@
                               <h5>Company Type</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                               {{email}}
+                               {{compType}}
                             </div>
                         </div>
                         <hr>
@@ -55,7 +55,7 @@
                                 <h5>Company Email</h5>
                            </div>
                            <div class="col-md-9 text-secondary">
-                              {Investor}
+                              {{compEmail}}
                            </div>
                         </div>
                         <hr>
