--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -64,6 +64,7 @@
                 </path>
             </svg></li>
         <li><a href="#">Logout</a></li>
+         <li><a href="/login">Login</a></li>
         <li><a href="/home">Home</a></li>
         <li><a href="/account">Account</a></li>
         <li class="push"><a href="#footer-contact">Contact</a></li>
