--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -62,9 +62,11 @@
                 <path
                     d="M0 7v15h24v-15h-24zm22 13h-20v-6h6v-2h-6v-3h20v3h-6v2h6v6zm-13-15.5c0-.276.224-.5.5-.5h5c.276 0 .5.224.5.5v1.5h2v-2c0-1.104-.896-2-2-2h-6c-1.104 0-2 .896-2 2v2h2v-1.5zm5 6.5h-4v4h4v-4z">
                 </path>
-            </svg></li>
-        <li><a href="#">Logout</a></li>
-         <li><a href="/login">Login</a></li>
+            </svg>
+        </li>
+        
+        <li><a href="{{headerData.link}}">{{headerData.label}}</a></li>
+
         <li><a href="/home">Home</a></li>
         <li><a href="/account">Account</a></li>
         <li class="push"><a href="#footer-contact">Contact</a></li>
