--- a/views/account_intern.hbs
+++ b/views/account_intern.hbs
@@ -8,23 +8,15 @@
     {{> _header}}
    <div class="container">
        <div class="main">
-           <div class="topbar">
-              <a href="">Logout</a>
-              <a href="">Contact</a>
-              <a href="#content-table">Invested Startups</a>
-              <a href="">Home</a>
 
            </div>
            <div class="row">
              <div class="col-md-4 mt-1">
                  <div class="card text-center sidebar">
                    <div class="card-body">
+                       <img src="/images/broker.png" class="rounded-circle" width="150">
                      <div class="mt-3">
- 					     <h3>Company Name</h3>
-                          <br>
-                         {{!-- <a href="">Work</a> --}}
-                         <a href="">Company type</a>
-                         <a href="">Contact Us</a>
+                         <a href="">Intern Account</a>
                     </div>
                   </div>
                 </div>
@@ -35,10 +27,10 @@
                      <div class="card-body">
                           <div class="row">
                              <div class="col-md-3">
-                               <h5>Company Name</h5>
+                               <h5>Full Name</h5>
                              </div>
                              <div class="col-md-9 text-secondary">
-                                 {Flipr}
+                                 {{internName}}
                              </div>
                          </div>
                          <hr>
@@ -47,70 +39,95 @@
                               <h5>Email</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                               {{email}}
+                               {{internEmail}}
                             </div>
                         </div>
                         <hr>
                         <div class="row">
                            <div class="col-md-3">
-                                <h5>Type</h5>
+                                <h5>College</h5>
                            </div>
                            <div class="col-md-9 text-secondary">
-                              {Investor}
+                              {{college}}
                            </div>
                         </div>
                         <hr>
-                        
+                        <div class="row">
+                             <div class="col-md-3">
+                                  <h5>Department</h5>
+                             </div>
+                             <div class="col-md-9 text-secondary">
+  							      {{department}}
+                             </div>
+                         </div>
                      </div>
                  </div>
-                 {{!-- <div class="card mb-3 content">
-                      <h1 class="m-3">Recent Projects</h1> 
+                 <div class="card mb-3 content">
+                      <h1 class="m-3">Details</h1> 
 					  <div class="card-body">
                          <div class="row">
                             <div class="col-md-3">
-                                 <h5>Project Name</h5>
+                                 <h5>Qualification</h5>
                             </div>
                             <div class="col-md-9 text-secondary">
-                                Project Description
+                                {{qualifications}}
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-3">
+                                 <h5>College Degree</h5>
+                            </div>
+                            <div class="col-md-9 text-secondary">
+                                {{collegeDegree}}
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-3">
+                                 <h5>DoB</h5>
+                            </div>
+                            <div class="col-md-9 text-secondary">
+                                {{internDOB}}
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-3">
+                                 <h5>Gradution Year</h5>
+                            </div>
+                            <div class="col-md-9 text-secondary">
+                                {{graduationYear}}
                             </div>
                           </div>
                       </div>
-                   </div> --}}
+                   </div>
                </div>
            </div>
+
            <br><br>
-           <h1>Invested Startups</h1>
-    <table class="content-table" id="content-table">
+
+           <h1>APPLICATION STATUS</h1>
+    <table class="content-table">
         <thead>
             <tr>
-                <th>Startup</th>
+                <th>Company</th>
                 <th>Email</th>
-                <th>Startup Nature</th>
-                <th>Date of Investing</th>
-                <th>Budget</th>
+                <th>Date of Application</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Flipr</td>
                 <td>Flipr@gmail.com</td>
-                <td>Designer</td>
                 <td>12-02-2021</td>
-                <td>900</td>
             </tr>
             <tr>
                 <td>Brokers on the Bay</td>
                 <td>brokerb@gmail.com</td>
-                <td>Backend Developer</td>
                 <td>13-02-2021</td>
-                <td>400</td>
             </tr>
             <tr>
                 <td>Esurfer</td>
                 <td>esurf@gmail.com</td>
-                <td>Designer</td>
                 <td>12-02-2021</td>
-                <td>700</td>
             </tr>
         </tbody>
     </table>
