--- a/views/account_intern.hbs
+++ b/views/account_intern.hbs
@@ -130,7 +130,7 @@
                 <td>12-02-2021</td>
             </tr>
         </tbody>
-    </table>
+    </table><br><br>
        </div>
     </div>
 </body>
