--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -78,7 +78,6 @@
                 <th>Email</th>
                 <th>Startup Nature</th>
                 <th>Date of Investing</th>
-                <th>Budget</th>
             </tr>
         </thead>
         <tbody>
@@ -87,25 +86,23 @@
                 <td>Flipr@gmail.com</td>
                 <td>Designer</td>
                 <td>12-02-2021</td>
-                <td>900</td>
             </tr>
             <tr>
                 <td>Brokers on the Bay</td>
                 <td>brokerb@gmail.com</td>
                 <td>Backend Developer</td>
                 <td>13-02-2021</td>
-                <td>400</td>
             </tr>
             <tr>
                 <td>Esurfer</td>
                 <td>esurf@gmail.com</td>
                 <td>Designer</td>
                 <td>12-02-2021</td>
-                <td>700</td>
             </tr>
         </tbody>
-    </table>
+    </table><br><br>
        </div>
     </div>
+    
 </body>
 </html>
